--- a/heatChart.html
+++ b/heatChart.html
@@ -8,15 +8,19 @@
 $(function(){
 	// $('#table').heatChart({theta:90});
 	// $('#table').heatChart({theta:180});
-	$('#table').heatChart({theta:270});
+	$('#table').heatChart({theta:270, offset:180, reverse:false});
 	// $('#table').heatChart({theta:360});
 });
 </script>
 <style type="text/css">
 table tr td {
-	width:20px;
-	height:20px;
+	width:40px;
+	height:40px;
+
 	text-align:center;
+	color:white;
+	font-family:sans-serif;
+	font-size:9px;
 }
 </style>
 </head>
