added applyTo option

--- a/heatChart.html
+++ b/heatChart.html
@@ -8,7 +8,7 @@
 $(function(){
 	// $('#table').heatChart({theta:90});
 	// $('#table').heatChart({theta:180});
-	$('#table').heatChart({theta:270, offset:180, reverse:false});
+	$('#table').heatChart({theta:270, offset:180, reverse:false, applyTo:'color'});
 	// $('#table').heatChart({theta:360});
 });
 </script>
