--- a/heatChart.html
+++ b/heatChart.html
@@ -8,8 +8,8 @@
 $(function(){
 	// $('#table').heatChart({theta:90});
 	// $('#table').heatChart({theta:180});
-	$('#table').heatChart({theta:270, offset:180, reverse:false, applyTo:'color'});
-	// $('#table').heatChart({theta:360});
+	// $('#table').heatChart({theta:270, offset:180, reverse:false, applyTo:'color'});
+	$('#table').heatChart({theta:180, offset:180, saturation:100, lightness:75});
 });
 </script>
 <style type="text/css">
