corrected offset math

--- a/heatChart.html
+++ b/heatChart.html
@@ -6,10 +6,10 @@
 <script src="./heatChart.js"></script>
 <script type="text/javascript">
 $(function(){
-	// $('#table').heatChart({theta:90});
+	$('#table').heatChart({theta:220});
 	// $('#table').heatChart({theta:180});
 	// $('#table').heatChart({theta:270, offset:180, reverse:false, applyTo:'color'});
-	$('#table').heatChart({theta:180, offset:180, saturation:100, lightness:75});
+	// $('#table').heatChart({theta:180, offset:180, saturation:100, lightness:75});
 });
 </script>
 <style type="text/css">
