--- a/heatChart.html
+++ b/heatChart.html
@@ -6,13 +6,16 @@
 <script src="./heatChart.js"></script>
 <script type="text/javascript">
 $(function(){
-	$('#table').heatChart({theta:220});
-	// $('#table').heatChart({theta:180});
+	$('#table').heatChart({theta:220, offset:50, applyTo:'color', lightness:25});
+	$('#div').heatChart({dataTag:'div', theta:220});
 	// $('#table').heatChart({theta:270, offset:180, reverse:false, applyTo:'color'});
 	// $('#table').heatChart({theta:180, offset:180, saturation:100, lightness:75});
 });
 </script>
 <style type="text/css">
+table, #div {
+	width:100%;
+}
 table tr td {
 	width:40px;
 	height:40px;
@@ -22,9 +25,59 @@ table tr td {
 	font-family:sans-serif;
 	font-size:9px;
 }
+
+#div div {
+	width:40px;
+	height:40px;
+	display:block;
+	float:left;
+	text-indent:-10000px;
+}
 </style>
 </head>
 <body>
+	<div id="div">
+		<div>0</div>
+		<div>1</div>
+		<div>2</div>
+		<div>3</div>
+		<div>4</div>
+		<div>5</div>
+		<div>6</div>
+		<div>7</div>
+		<div>8</div>
+		<div>9</div>
+		<div>10</div>
+		<div>11</div>
+		<div>12</div>
+		<div>13</div>
+		<div>14</div>
+		<div>15</div>
+		<div>16</div>
+		<div>17</div>
+		<div>18</div>
+		<div>19</div>
+		<div>20</div>
+		<div>21</div>
+		<div>22</div>
+		<div>23</div>
+		<div>24</div>
+		<div>25</div>
+		<div>26</div>
+		<div>27</div>
+		<div>28</div>
+		<div>29</div>
+		<div>30</div>
+		<div>31</div>
+		<div>32</div>
+		<div>33</div>
+		<div>34</div>
+		<div>35</div>
+		<div>36</div>
+		<div>37</div>
+		<div>38</div>
+		<div>39</div>
+	</div>
 	<table id="table">
 		<tr>
 			<td>0</td>
