complete discreet color modeling

--- a/sample.html
+++ b/sample.html
@@ -84,10 +84,88 @@
 
     <div class="container">
       <h1>HeatChart.js</h1>
-      <p>a 'make data fun' jQuery plugin</p>
+      <p>Makes Data Colorful</p>
       <div class="row">
         <div class="span12">
-          <pre>$('#table1').heatChart({theta: 90, colorModel: 'rgb'});</pre>
+          <pre>$('#table0').heatChart({theta: 90, colorModel: 'rgb'});</pre>
+          <table id="table0">
+            <tr>
+              <td>0</td>
+              <td>1</td>
+              <td>2</td>
+              <td>3</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td>7</td>
+              <td>8</td>
+              <td>9</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>11</td>
+              <td>12</td>
+              <td>13</td>
+              <td>14</td>
+              <td>15</td>
+              <td>16</td>
+              <td>17</td>
+              <td>18</td>
+              <td>19</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>21</td>
+              <td>22</td>
+              <td>23</td>
+              <td>24</td>
+              <td>25</td>
+              <td>26</td>
+              <td>27</td>
+              <td>28</td>
+              <td>29</td>
+            </tr>
+            <tr>
+              <td>30</td>
+              <td>31</td>
+              <td>32</td>
+              <td>33</td>
+              <td>34</td>
+              <td>35</td>
+              <td>36</td>
+              <td>37</td>
+              <td>38</td>
+              <td>39</td>
+            </tr>
+            <tr>
+              <td>40</td>
+              <td>41</td>
+              <td>42</td>
+              <td>43</td>
+              <td>44</td>
+              <td>45</td>
+              <td>46</td>
+              <td>47</td>
+              <td>48</td>
+              <td>49</td>
+            </tr>
+            <tr>
+              <td>50</td>
+              <td>51</td>
+              <td>52</td>
+              <td>53</td>
+              <td>54</td>
+              <td>55</td>
+              <td>56</td>
+              <td>57</td>
+              <td>58</td>
+              <td>59</td>
+            </tr>
+          </table>
+          <hr/>
+        </div>
+        <div class="span12">
+          <pre>$('#table1').heatChart({theta: 90, discreet: true, steps: 6});</pre>
           <table id="table1">
             <tr>
               <td>0</td>
@@ -493,7 +571,7 @@
                   <hr/>
                 </div>
                 <div class="span12">
-                  <pre>$('#div2').heatChart({blackAndWhite: true, dataTag: 'div'});</pre>
+                  <pre>$('#div2').heatChart({colorModel: 'grayscale', dataTag: 'div'});</pre>
                   <div id="div2" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -510,7 +588,7 @@
                 </div>
 
                 <div class="span12">
-                  <pre>$('#div3').heatChart({blackAndWhite: true, discreet: true, steps:3, dataTag: 'div'});</pre>
+                  <pre>$('#div3').heatChart({colorModel: 'grayscale', discreet: true, steps:3, dataTag: 'div'});</pre>
                   <div id="div3" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -527,7 +605,7 @@
                 </div>
 
                 <div class="span12">
-                  <pre>$('#div4').heatChart({blackAndWhite: true, discreet: true, steps:5, dataTag: 'div'});</pre>
+                  <pre>$('#div4').heatChart({colorModel: 'grayscale', discreet: true, steps:5, dataTag: 'div'});</pre>
                   <div id="div4" class="demo-div clearfix">
                     <div>0</div>
                     <div>1</div>
@@ -1021,7 +1099,8 @@
   <script src="./heatChart.js"></script>
   <script type="text/javascript">
   $(function(){
-    $('#table1').heatChart({theta: 90, colorModel: 'rgb'});
+    $('#table0').heatChart({theta: 90, colorModel: 'rgb'});
+    $('#table1').heatChart({theta: 90, discreet: true, steps: 6});
     $('#table2').heatChart({theta: 90, applyTo: 'color'});
     $('#table3').heatChart({theta: 180});
     $('#table4').heatChart({theta: 180, offset: 180});
