--- a/sample.html
+++ b/sample.html
@@ -250,6 +250,86 @@
           <hr/>
         </div>
         <div class="span12">
+          <h3>Choose Your Scale</h3>
+          <p>Default is linear, but if you're feeling fancy, why not go logarithmic?</p>
+          <pre>$('#table1point5').heatChart({theta: 90, colorModel: 'rgb', scale: 'log'});</pre>
+          <table id="table1point5">
+            <tr>
+              <td>0</td>
+              <td>1</td>
+              <td>2</td>
+              <td>3</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td>7</td>
+              <td>8</td>
+              <td>9</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>11</td>
+              <td>12</td>
+              <td>13</td>
+              <td>14</td>
+              <td>15</td>
+              <td>16</td>
+              <td>17</td>
+              <td>18</td>
+              <td>19</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>21</td>
+              <td>22</td>
+              <td>23</td>
+              <td>24</td>
+              <td>25</td>
+              <td>26</td>
+              <td>27</td>
+              <td>28</td>
+              <td>29</td>
+            </tr>
+            <tr>
+              <td>30</td>
+              <td>31</td>
+              <td>32</td>
+              <td>33</td>
+              <td>34</td>
+              <td>35</td>
+              <td>36</td>
+              <td>37</td>
+              <td>38</td>
+              <td>39</td>
+            </tr>
+            <tr>
+              <td>40</td>
+              <td>41</td>
+              <td>42</td>
+              <td>43</td>
+              <td>44</td>
+              <td>45</td>
+              <td>46</td>
+              <td>47</td>
+              <td>48</td>
+              <td>49</td>
+            </tr>
+            <tr>
+              <td>50</td>
+              <td>51</td>
+              <td>52</td>
+              <td>53</td>
+              <td>54</td>
+              <td>55</td>
+              <td>56</td>
+              <td>57</td>
+              <td>58</td>
+              <td>59</td>
+            </tr>
+          </table>
+          <hr/>
+        </div>
+        <div class="span12">
           <h3>Color What You Want</h3>
           <p>If you don't want to apply the coloring to element backrounds, pass your desired alternative CSS attribute.</p>
                   <pre>$('#table2').heatChart({theta: 90, applyTo: 'color'});</pre>
@@ -642,7 +722,7 @@
 
                 <div class="span12">
                   <h3>Smart Parsing</h3>
-                  <p>Values in parse elements needn't be entirely numeric. We'll do our best to pull out the numbers.</p>
+                  <p>We're totally cool with floats. Furthermore, values in your elements needn't even need to be entirely numeric. We'll do our best to pull out the right numbers.</p>
                   <pre>$('#div5').heatChart({theta: 220, dataTag: 'a', applyTo: 'color'});</pre>
                   <div id="div5" class="demo-div clearfix">
                     <p><a href="#" title="1 Widget">1 Widget</a> | <a href="#" title="2 Widgets">2 Widgets</a> | <a href="#" title="3 Widgets">3 Widgets</a> | <a href="#" title="4 Widgets">4 Widgets</a> | <a href="#" title="5 Widgets">5 Widgets</a> | <a href="#" title="6 Widgets">6 Widgets</a> | <a href="#" title="7 Widgets">7 Widgets</a> | <a href="#" title="8 Widgets">8 Widgets</a> | <a href="#" title="9 Widgets">9 Widgets</a> | <a href="#" title="10 Widgets">10 Widgets</a></p>
@@ -1105,6 +1185,7 @@
   $(function(){
     $('#table0').heatChart({theta: 90, colorModel: 'rgb'});
     $('#table1').heatChart({theta: 90, discrete: true, steps: 3});
+    $('#table1point5').heatChart({theta: 90, colorModel: 'rgb', scale: 'log'});
     $('#table2').heatChart({theta: 90, applyTo: 'color'});
     $('#table3').heatChart({theta: 180});
     $('#table4').heatChart({theta: 180, offset: 180});
