minor doc change

--- a/sample.html
+++ b/sample.html
@@ -170,7 +170,7 @@
           <hr/>
         </div>
         <div class="span12">
-          <h3>Discrete Color Values</h3>
+          <h3>Discrete Color Steps</h3>
           <p>If you don't want a full gradient, you can pass your desired number of color steps. Also compatible with grayscale colorspace.</p>
           <pre>$('#table1').heatChart({theta: 90, discrete: true, steps: 3});</pre>
           <table id="table1">
